statum-macros/tests/ui/invalid_validators_alias_wrong_payload.stderr
error: Error: validator `is_in_progress` for `impl DbRow` rebuilding `TaskMachine` state `TaskState::InProgress` must return `Result<Progress, _>` (or an equivalent alias), but found `statum :: Result < () >` with payload `()`.
  --> tests/ui/invalid_validators_alias_wrong_payload.rs:44:33
   |
44 |     fn is_in_progress(&self) -> statum::Result<()> {
   |                                 ^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_validators_alias_wrong_payload.rs:52:2
   |
52 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_validators_alias_wrong_payload.rs`
